--- a/ArchitectureTemplate.Infrastructure.Data/ArchitectureTemplate.Infrastructure.Data.csproj
+++ b/ArchitectureTemplate.Infrastructure.Data/ArchitectureTemplate.Infrastructure.Data.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\201709242001395_Initial.Designer.cs">
       <DependentUpon>201709242001395_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709292249108_IncludeData.cs" />
+    <Compile Include="Migrations\201709292249108_IncludeData.Designer.cs">
+      <DependentUpon>201709292249108_IncludeData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DictionaryAllRepository.cs" />
@@ -100,6 +104,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201709242001395_Initial.resx">
       <DependentUpon>201709242001395_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709292249108_IncludeData.resx">
+      <DependentUpon>201709292249108_IncludeData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
