--- a/ArchitectureTemplate.Mvc/Web.config
+++ b/ArchitectureTemplate.Mvc/Web.config
@@ -18,7 +18,8 @@
     <add key="EmailFrom" value="test" />
   </appSettings>
   <connectionStrings>
-    <add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />
+    <add name="EntityContext" connectionString="Data Source=ADERBAL-PC\SQLEXPRESS; initial catalog=ArchitectureTemplateDb;user id=aderbal;password=aderbal;" providerName="System.Data.SqlClient" />
+    <!--<add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
     <globalization culture="pt-BR" uiCulture="pt-BR" />
