--- a/ArchitectureTemplate.Mvc/packages.config
+++ b/ArchitectureTemplate.Mvc/packages.config
@@ -28,8 +28,10 @@
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
   <package id="SimpleInjector" version="3.1.3" targetFramework="net46" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.1.3" targetFramework="net46" />
   <package id="SimpleInjector.Integration.Web" version="3.1.3" targetFramework="net46" />
   <package id="SimpleInjector.Integration.Web.Mvc" version="3.1.3" targetFramework="net46" />
+  <package id="SimpleInjector.Integration.WebApi" version="3.1.3" targetFramework="net46" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
