--- a/ArchitectureTemplate.Mvc/Web.config
+++ b/ArchitectureTemplate.Mvc/Web.config
@@ -18,8 +18,7 @@
     <add key="EmailFrom" value="test" />
   </appSettings>
   <connectionStrings>
-    <add name="EntityContext" connectionString="Data Source=ADERBAL-PC\SQLEXPRESS; initial catalog=ArchitectureTemplateDb;user id=aderbal;password=aderbal;" providerName="System.Data.SqlClient" />
-    <!--<add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />-->
+    <add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <globalization culture="pt-BR" uiCulture="pt-BR" />
@@ -67,10 +66,6 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
