--- a/ArchitectureTemplate.Mvc/ArchitectureTemplate.Mvc.csproj
+++ b/ArchitectureTemplate.Mvc/ArchitectureTemplate.Mvc.csproj
@@ -200,7 +200,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\SimpleInjectorInitializer.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\Api\PerfilController.cs" />
+    <Compile Include="Controllers\Api\PerfilApiController.cs" />
     <Compile Include="Controllers\PermissaoMenuController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\PermissaoController.cs" />
