--- a/ArchitectureTemplate.Mvc/ArchitectureTemplate.Mvc.csproj
+++ b/ArchitectureTemplate.Mvc/ArchitectureTemplate.Mvc.csproj
@@ -194,6 +194,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AsIsBundleOrderer.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\ResponseHeaders.cs" />
