--- a/ArchitectureTemplate.Infrastructure.WCF.Contracts/ArchitectureTemplate.Infrastructure.WCF.Contracts.csproj
+++ b/ArchitectureTemplate.Infrastructure.WCF.Contracts/ArchitectureTemplate.Infrastructure.WCF.Contracts.csproj
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,7 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entity\Menu.cs" />
+    <Compile Include="Entity\Perfil.cs" />
+    <Compile Include="Entity\PerfilPorMenu.cs" />
+    <Compile Include="Entity\PerfilPorTela.cs" />
+    <Compile Include="Entity\Usuario.cs" />
+    <Compile Include="Interface\ITelaService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Entity\Tela.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
