--- a/ArchitectureTemplate.Infrastructure.WCF.Contracts/ArchitectureTemplate.Infrastructure.WCF.Contracts.csproj
+++ b/ArchitectureTemplate.Infrastructure.WCF.Contracts/ArchitectureTemplate.Infrastructure.WCF.Contracts.csproj
@@ -42,14 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity\Menu.cs" />
-    <Compile Include="Entity\Perfil.cs" />
-    <Compile Include="Entity\PerfilPorMenu.cs" />
-    <Compile Include="Entity\PerfilPorTela.cs" />
-    <Compile Include="Entity\Usuario.cs" />
-    <Compile Include="Interface\ITelaService.cs" />
+    <Compile Include="Entities\MenuContract.cs" />
+    <Compile Include="Entities\PerfilContract.cs" />
+    <Compile Include="Entities\PerfilPorMenuContract.cs" />
+    <Compile Include="Entities\PerfilPorTelaContract.cs" />
+    <Compile Include="Entities\UsuarioContract.cs" />
+    <Compile Include="ServiceInterfaces\ITelaServiceContract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entity\Tela.cs" />
+    <Compile Include="Entities\TelaContract.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
