Including SimpleMapper and host

--- a/ArchitectureTemplate.Infraestrutura.CrossCutting.Support/ArchitectureTemplate.Infraestrutura.CrossCutting.Support.csproj
+++ b/ArchitectureTemplate.Infraestrutura.CrossCutting.Support/ArchitectureTemplate.Infraestrutura.CrossCutting.Support.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\EmailMail.cs" />
+    <Compile Include="Extensions\SimpleMapper.cs" />
     <Compile Include="Extensions\Pagination.cs" />
     <Compile Include="Extensions\Word.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
