Including dependence Injection on project

--- a/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
@@ -6,18 +6,18 @@
 
   <system.serviceModel>
     <client>
-      <endpoint address="net.tcp://localhost:8009/TelaService"
+      <endpoint address="net.tcp://localhost:8009/WcfService"
                 binding="netTcpBinding"
                 contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract"
                 name="tcpEP" />
-      <endpoint address="http://localhost/TelaService"
+      <!--<endpoint address="http://localhost/WcfService"
                 binding="basicHttpBinding"
                 contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract"
                 name="httpEP" />
-      <endpoint address="http://localhost:4497/TelaService"
+      <endpoint address="http://localhost:4497/WcfService"
                 binding="wsHttpBinding"
                 contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract"
-                name="webEP" />
+                name="webEP" />-->
     </client>
   </system.serviceModel>
 </configuration>
