--- a/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
@@ -9,15 +9,15 @@
       <endpoint address="net.tcp://localhost:8009/WcfService"
                 binding="netTcpBinding"
                 contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract"
-                name="tcpEP" />
-      <!--<endpoint address="http://localhost/WcfService"
+                name="tcpEp" />
+      <endpoint address="http://localhost/WcfService"
                 binding="basicHttpBinding"
-                contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract"
-                name="httpEP" />
-      <endpoint address="http://localhost:4497/WcfService"
+                contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract" 
+                name="httpEp"/>
+      <!--<endpoint address="http://localhost:4497/WcfService"
                 binding="wsHttpBinding"
                 contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract"
-                name="webEP" />-->
+                name="webEp" />-->
     </client>
   </system.serviceModel>
 </configuration>
