--- a/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
@@ -9,10 +9,12 @@
     <system.serviceModel>
       <services>
         <service name="ArchitectureTemplate.Infrastructure.WCF.Services.TelaManager">
-          <endpoint address="net.tcp://localhost:8009/WcfService" binding="netTcpBinding"
-            contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract" />
-          <!--<endpoint address="http://localhost/WcfService" binding="basicHttpBinding"
-            contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract" />-->
+          <endpoint address="net.tcp://localhost:8009/WcfService" 
+                    binding="netTcpBinding"
+                    contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract" />
+          <endpoint address="http://localhost/WcfService" 
+                    binding="basicHttpBinding"
+                    contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract" />
         </service>
       </services>
     </system.serviceModel>
