--- a/ArchitectureTemplate.Infrastructure.WCF.Host/ArchitectureTemplate.Infrastructure.WCF.Host.csproj
+++ b/ArchitectureTemplate.Infrastructure.WCF.Host/ArchitectureTemplate.Infrastructure.WCF.Host.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="SimpleInjector, Version=3.1.3.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
       <HintPath>..\packages\SimpleInjector.3.1.3\lib\net45\SimpleInjector.dll</HintPath>
     </Reference>
