Refactoring: adjusting the language

--- a/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
@@ -8,13 +8,11 @@
     </startup>
     <system.serviceModel>
       <services>
-        <service name="ArchitectureTemplate.Infrastructure.WCF.Services.TelaManager">
-          <endpoint address="net.tcp://localhost:8009/WcfService" 
-                    binding="netTcpBinding"
-                    contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract" />
-          <endpoint address="http://localhost/WcfService" 
-                    binding="basicHttpBinding"
-                    contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.ITelaServiceContract" />
+        <service name="ArchitectureTemplate.Infrastructure.WCF.Services.ScreenManager">
+          <endpoint address="net.tcp://localhost:8009/WcfService" binding="netTcpBinding"
+            contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.IScreenServiceContract" />
+          <endpoint address="http://localhost/WcfService" binding="basicHttpBinding"
+            contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.IScreenServiceContract" />
         </service>
       </services>
     </system.serviceModel>
