--- a/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
@@ -19,6 +19,13 @@
                 contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.IScreenServiceContract"
                 name="webEp" />-->
     </client>
+    <bindings>
+      <netTcpBinding>
+        <binding sendTimeout="00:10:00" maxReceivedMessageSize="2000000" receiveTimeout="00:20:00">
+          <!--<reliableSession enabled="true" inactivityTimeout="00:20:00" ordered="true" />-->
+        </binding>
+      </netTcpBinding>
+    </bindings>
   </system.serviceModel>
 </configuration>
 
