Including referense service

--- a/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
@@ -4,7 +4,7 @@
       <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
 
-  <system.serviceModel>
+  <!--<system.serviceModel>
     <client>
       <endpoint address="net.tcp://localhost:8009/WcfService"
                 binding="netTcpBinding"
@@ -14,18 +14,35 @@
                 binding="basicHttpBinding"
                 contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.IScreenServiceContract" 
                 name="httpEp"/>
-      <!--<endpoint address="http://localhost:4497/WcfService"
+      --><!--<endpoint address="http://localhost:4497/WcfService"
                 binding="wsHttpBinding"
                 contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.IScreenServiceContract"
-                name="webEp" />-->
+                name="webEp" />--><!--
     </client>
     <bindings>
       <netTcpBinding>
         <binding sendTimeout="00:10:00" maxReceivedMessageSize="2000000" receiveTimeout="00:20:00">
-          <!--<reliableSession enabled="true" inactivityTimeout="00:20:00" ordered="true" />-->
+          --><!--<reliableSession enabled="true" inactivityTimeout="00:20:00" ordered="true" />--><!--
         </binding>
       </netTcpBinding>
     </bindings>
+  </system.serviceModel>-->
+  <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding name="NetTcpBinding_IScreenServiceContract" />
+      </netTcpBinding>
+    </bindings>
+    <client>
+      <endpoint address="net.tcp://localhost:8009/WcfService" binding="netTcpBinding"
+        bindingConfiguration="NetTcpBinding_IScreenServiceContract"
+        contract="ServiceReferenceScreens.IScreenServiceContract" 
+                name="NetTcpBinding_IScreenServiceContract">
+        <identity>
+          <userPrincipalName value="ADERBAL-PC\aderb" />
+        </identity>
+      </endpoint>
+    </client>
   </system.serviceModel>
 </configuration>
 
