--- a/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
@@ -2,7 +2,6 @@
 <configuration>
   <connectionStrings>
     <add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />
-    <add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
@@ -11,29 +10,43 @@
       <services>
         <!--<service name="ArchitectureTemplate.Infrastructure.WCF.Services.ScreenManager" behaviorConfiguration="behaviorName">-->
         <service name="ArchitectureTemplate.Infrastructure.WCF.Services.ScreenManager">
-          <endpoint address="net.tcp://localhost:8009/WcfService" 
+          <host>
+            <baseAddresses>
+              <add baseAddress="http://localhost:8086"/>
+              <add baseAddress="net.tcp://localhost:8009/WcfService" />
+            </baseAddresses>
+          </host>
+          <!--<endpoint address="net.tcp://localhost:8009/WcfService" 
                     binding="netTcpBinding"
                     contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.IScreenServiceContract" />
-                    <!--bindingConfiguration="bindingName" />-->
+                    -->
+          <!--bindingConfiguration="bindingName" />--><!--
           <endpoint address="http://localhost/WcfService" 
                     binding="basicHttpBinding"
+                    contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.IScreenServiceContract" />-->
+          <endpoint address=""
+                    binding="netTcpBinding"
                     contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.IScreenServiceContract" />
+          <endpoint address="MEX"
+                    binding="mexTcpBinding"
+                    contract="IMetadataExchange" />
         </service>
       </services>
-      <bindings>
+      <!--<bindings>
         <netTcpBinding>
-          <!--<binding name="bindingName" sendTimeout="00:10:00" maxReceivedMessageSize="2000000" receiveTimeout="00:20:00">-->
+          --><!--<binding name="bindingName" sendTimeout="00:10:00" maxReceivedMessageSize="2000000" receiveTimeout="00:20:00">--><!--
           <binding sendTimeout="00:10:00" maxReceivedMessageSize="2000000" receiveTimeout="00:20:00">
-            <!--<reliableSession enabled="true" inactivityTimeout="00:20:00" ordered="true" />-->
+            --><!--<reliableSession enabled="true" inactivityTimeout="00:20:00" ordered="true" />--><!--
           </binding>
         </netTcpBinding>
-      </bindings>
+      </bindings>-->
       <behaviors>
         <serviceBehaviors>
           <!--<behavior name="behaviorName">-->
           <behavior>
-            <serviceDebug includeExceptionDetailInFaults="true" />
-            <serviceThrottling maxConcurrentCalls="16" maxConcurrentInstances="116" maxConcurrentSessions="100" />
+            <serviceMetadata httpGetEnabled="true" />
+            <!--<serviceDebug includeExceptionDetailInFaults="true" />
+            <serviceThrottling maxConcurrentCalls="16" maxConcurrentInstances="116" maxConcurrentSessions="100" />-->
           </behavior>
         </serviceBehaviors>
       </behaviors>
