--- a/ArchitectureTemplate.Infrastructure.WCF.Client/ArchitectureTemplate.Infrastructure.WCF.Client.csproj
+++ b/ArchitectureTemplate.Infrastructure.WCF.Client/ArchitectureTemplate.Infrastructure.WCF.Client.csproj
@@ -49,7 +49,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Connected Services\ServiceReferenceScreens\item.xsd">
       <SubType>Designer</SubType>
     </None>
