--- a/ArchitectureTemplate.Infrastructure.WCF.Services/ArchitectureTemplate.Infrastructure.WCF.Services.csproj
+++ b/ArchitectureTemplate.Infrastructure.WCF.Services/ArchitectureTemplate.Infrastructure.WCF.Services.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProfileManager.cs" />
     <Compile Include="ScreenManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
