Including service reference

--- a/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
@@ -31,13 +31,20 @@
     <bindings>
       <netTcpBinding>
         <binding name="NetTcpBinding_IScreenServiceContract" />
+        <binding name="NetTcpBinding_IProfileServiceContract" />
       </netTcpBinding>
     </bindings>
     <client>
       <endpoint address="net.tcp://localhost:8009/WcfService" binding="netTcpBinding"
         bindingConfiguration="NetTcpBinding_IScreenServiceContract"
-        contract="ServiceReferenceScreens.IScreenServiceContract" 
-                name="NetTcpBinding_IScreenServiceContract">
+        contract="ServiceReferenceScreens.IScreenServiceContract" name="NetTcpBinding_IScreenServiceContract">
+        <identity>
+          <userPrincipalName value="ADERBAL-PC\aderb" />
+        </identity>
+      </endpoint>
+      <endpoint address="net.tcp://localhost:8009/WcfServiceProfile"
+        binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IProfileServiceContract"
+        contract="ServiceReferenceProfile.IProfileServiceContract" name="NetTcpBinding_IProfileServiceContract">
         <identity>
           <userPrincipalName value="ADERBAL-PC\aderb" />
         </identity>
