--- a/ArchitectureTemplate.Infrastructure.WCF.Client/ArchitectureTemplate.Infrastructure.WCF.Client.csproj
+++ b/ArchitectureTemplate.Infrastructure.WCF.Client/ArchitectureTemplate.Infrastructure.WCF.Client.csproj
@@ -40,6 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\ServiceReferenceProfile\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\ServiceReferenceScreens\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -52,6 +57,16 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Connected Services\ServiceReferenceProfile\item.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ServiceReferenceProfile\item1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ServiceReferenceProfile\item2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ServiceReferenceProfile\ProfileManager.wsdl" />
     <None Include="Connected Services\ServiceReferenceScreens\item.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -62,6 +77,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\ServiceReferenceScreens\ScreenManager.wsdl" />
+    <None Include="Properties\DataSources\ArchitectureTemplate.Infrastructure.WCF.Contracts.Entities.ProfileContract.datasource" />
     <None Include="Properties\DataSources\ArchitectureTemplate.Infrastructure.WCF.Contracts.Entities.ScreenContract.datasource" />
   </ItemGroup>
   <ItemGroup>
@@ -78,6 +94,7 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\ServiceReferenceProfile\" />
     <WCFMetadataStorage Include="Connected Services\ServiceReferenceScreens\" />
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +108,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\ServiceReferenceScreens\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceReferenceProfile\item.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceReferenceProfile\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceReferenceProfile\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceReferenceProfile\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
