--- a/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />
+    <add name="EntityContext" connectionString="Data Source=ADERBAL-PC\SQLEXPRESS; initial catalog=ArchitectureTemplateDb;user id=aderbal;password=aderbal;" providerName="System.Data.SqlClient" />
+    <!--<add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
@@ -31,6 +32,20 @@
                     binding="mexTcpBinding"
                     contract="IMetadataExchange" />
         </service>
+        <service name="ArchitectureTemplate.Infrastructure.WCF.Services.ProfileManager">
+          <host>
+            <baseAddresses>
+              <add baseAddress="http://localhost:8087"/>
+              <add baseAddress="net.tcp://localhost:8009/WcfServiceProfile" />
+            </baseAddresses>
+          </host><endpoint address=""
+                    binding="netTcpBinding"
+                    contract="ArchitectureTemplate.Infrastructure.WCF.Contracts.ServiceInterfaces.IProfileServiceContract" />
+          <endpoint address="MEX"
+                    binding="mexTcpBinding"
+                    contract="IMetadataExchange" />
+        </service>
+        
       </services>
       <!--<bindings>
         <netTcpBinding>
@@ -45,8 +60,8 @@
           <!--<behavior name="behaviorName">-->
           <behavior>
             <serviceMetadata httpGetEnabled="true" />
-            <!--<serviceDebug includeExceptionDetailInFaults="true" />
-            <serviceThrottling maxConcurrentCalls="16" maxConcurrentInstances="116" maxConcurrentSessions="100" />-->
+            <!--<serviceDebug includeExceptionDetailInFaults="true" />-->
+            <!--<serviceThrottling maxConcurrentCalls="16" maxConcurrentInstances="116" maxConcurrentSessions="100" />-->
           </behavior>
         </serviceBehaviors>
       </behaviors>
