--- a/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Host/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />
+    <add name="EntityContext" connectionString="Data Source=ADERBAL-PC\SQLEXPRESS; initial catalog=ArchitectureTemplateDb;user id=aderbal;password=aderbal;" providerName="System.Data.SqlClient" />
+    <!--<add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
