--- a/ArchitectureTemplate.Infrastructure.WindowService.HearSomething/app.config
+++ b/ArchitectureTemplate.Infrastructure.WindowService.HearSomething/app.config
@@ -7,8 +7,7 @@
     <add key="HoraInicio" value="20:00"></add>
   </appSettings>
   <connectionStrings>
-    <add name="EntityContext" connectionString="Data Source=ADERBAL-PC\SQLEXPRESS; initial catalog=ArchitectureTemplateDb;user id=aderbal;password=aderbal;" providerName="System.Data.SqlClient" />
-    <!--<add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />-->
+    <add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
