--- a/ArchitectureTemplate.Infrastructure.WCF.Defaut/Web.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Defaut/Web.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
+  <connectionStrings>
+    <add name="EntityContext" connectionString="Data Source=yourserver; initial catalog=DbName;user id=youruser;password=yourpassword;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
@@ -12,9 +14,7 @@
     <behaviors>
       <serviceBehaviors>
         <behavior>
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
