Including new reference service to client project and adjust windows service

--- a/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
+++ b/ArchitectureTemplate.Infrastructure.WCF.Client/App.config
@@ -29,6 +29,9 @@
   </system.serviceModel>-->
   <system.serviceModel>
     <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IServiceContract" />
+      </basicHttpBinding>
       <netTcpBinding>
         <binding name="NetTcpBinding_IScreenServiceContract" />
         <binding name="NetTcpBinding_IProfileServiceContract" />
@@ -49,6 +52,9 @@
           <userPrincipalName value="ADERBAL-PC\aderb" />
         </identity>
       </endpoint>
+      <endpoint address="http://localhost:64403/ServiceManager.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceContract"
+        contract="ServiceReferenceDefault.IServiceContract" name="BasicHttpBinding_IServiceContract" />
     </client>
   </system.serviceModel>
 </configuration>
