--- a/ArchitectureTemplate.Infrastructure.WCF.Client/ArchitectureTemplate.Infrastructure.WCF.Client.csproj
+++ b/ArchitectureTemplate.Infrastructure.WCF.Client/ArchitectureTemplate.Infrastructure.WCF.Client.csproj
@@ -40,6 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\ServiceReferenceDefault\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\ServiceReferenceProfile\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -55,6 +60,19 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ServiceReferenceDefault\ArchitectureTemplate.Infrastructure.WCF.Client.ServiceReferenceDefault.ScreenContract.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\ServiceReferenceDefault\ServiceManager.wsdl" />
+    <None Include="Connected Services\ServiceReferenceDefault\ServiceManager.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ServiceReferenceDefault\ServiceManager1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ServiceReferenceDefault\ServiceManager2.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Connected Services\ServiceReferenceProfile\item.xsd">
@@ -94,6 +112,7 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\ServiceReferenceDefault\" />
     <WCFMetadataStorage Include="Connected Services\ServiceReferenceProfile\" />
     <WCFMetadataStorage Include="Connected Services\ServiceReferenceScreens\" />
   </ItemGroup>
@@ -123,6 +142,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\ServiceReferenceProfile\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceReferenceDefault\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceReferenceDefault\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\ServiceReferenceDefault\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
