--- a/ArchitectureTemplate.Infrastructure.WCF.Defaut/ArchitectureTemplate.Infrastructure.WCF.Default.csproj
+++ b/ArchitectureTemplate.Infrastructure.WCF.Defaut/ArchitectureTemplate.Infrastructure.WCF.Default.csproj
@@ -41,6 +41,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SimpleInjector, Version=3.1.3.0, Culture=neutral, PublicKeyToken=984cb50dea722e99, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleInjector.3.1.3\lib\net45\SimpleInjector.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -73,8 +76,13 @@
       <Project>{927553C4-E24C-473B-ADD9-354497324AAF}</Project>
       <Name>ArchitectureTemplate.Infraestrutura.CrossCutting.Support</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ArchitectureTemplate.Infrastructure.CrossCutting.IoC\ArchitectureTemplate.Infrastructure.CrossCutting.IoC.csproj">
+      <Project>{66B226F1-E997-4138-BD83-0D1DB7C76FB5}</Project>
+      <Name>ArchitectureTemplate.Infrastructure.CrossCutting.IoC</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
