--- a/ArchitectureTemplate.Infrastructure.WindowService.HearSomething/ArchitectureTemplate.Infrastructure.WindowService.HearSomething.csproj
+++ b/ArchitectureTemplate.Infrastructure.WindowService.HearSomething/ArchitectureTemplate.Infrastructure.WindowService.HearSomething.csproj
@@ -124,6 +124,10 @@
       <Project>{57f6af5c-c804-4992-ab66-53ce627cbd3f}</Project>
       <Name>ArchitectureTemplate.Domain</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ArchitectureTemplate.Infraestrutura.CrossCutting.Support\ArchitectureTemplate.Infraestrutura.CrossCutting.Support.csproj">
+      <Project>{927553C4-E24C-473B-ADD9-354497324AAF}</Project>
+      <Name>ArchitectureTemplate.Infraestrutura.CrossCutting.Support</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ArchitectureTemplate.Infrastructure.CrossCutting.IoC\ArchitectureTemplate.Infrastructure.CrossCutting.IoC.csproj">
       <Project>{66b226f1-e997-4138-bd83-0d1db7c76fb5}</Project>
       <Name>ArchitectureTemplate.Infrastructure.CrossCutting.IoC</Name>
